# platform.adaptation.samsung_exynos.gst-plugins-camera-n4

./: LICENSE.APLv2  Makefile.am  NOTICE  build.sh  configure.ac  control.in
camerasrc/src/: Makefile.am  camerasrc-internal.c  camerasrc.c  gstcamerasrc.c  gstcamerasrccolorbalance.c  gstcamerasrccontrol.c
camerasrc/src/include/: camerasrc-common.h  camerasrc-error.h  camerasrc-internal.h  camerasrc.h  fimc-is-metadata.h  gstcamerasrc.h  gstcamerasrccolorbalance.h  gstcamerasrccontrol.h
packaging/: gst-plugins-camera-n4.spec
